# transmogrify

./: .coverage  README.md  pyproject.toml
.github/workflows/: python.yml
transmogrify/: main.py  test_main.py
