[tool.poetry]
name = "transmogrify"
version = "0.1.0"
description = ""
authors = ["Jonathan Wight <jwight@mac.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
typer = {extras = ["all"], version = "^0.9.0"}
toml = "^0.10.2"
pyyaml = "^6.0"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
transmogrify = "transmogrify.main:app"
